--- a/templates/layout.html
+++ b/templates/layout.html
@@ -101,6 +101,8 @@
                 <li><a href="/matches" {% if request.path == '/matches' %}class="active"{% endif %}>Partidas Ao Vivo</a></li>
                 <li><a href="/upcoming" {% if request.path == '/upcoming' %}class="active"{% endif %}>Agendadas</a></li>
                 <li><a href="/statistics" {% if request.path == '/statistics' %}class="active"{% endif %}>Estatísticas</a></li>
+                <li><a href="/charts" {% if request.path == '/charts' %}class="active"{% endif %}>Gráficos</a></li>
+                <li><a href="/head-to-head" {% if request.path == '/head-to-head' %}class="active"{% endif %}>Confrontos</a></li>
                 <li><a href="/players" {% if request.path == '/players' %}class="active"{% endif %}>Jogadores</a></li>
                 <li><a href="/reports" {% if request.path == '/reports' %}class="active"{% endif %}>Relatórios</a></li>
             </ul>
